--- a/NinjaNet-CSS-master/css/syntax2.css
+++ b/NinjaNet-CSS-master/css/syntax2.css
@@ -1,19 +1,25 @@
-#main-content p
+/* TARGETING ELEMENTS / TAGS */
+
+h2
 {
+    font-size: 24px;    
+}
+
+#content-header
+/* # means that it is an ID */
+{
+    font-size: 18px;
     color: red;
 }
 
-p
+span
 {
-    color: black;
+    display: block;
+    color: blue;
 }
 
-.test
+.deck
+/* . means that it is a class */
 {
-    color: green;
-}
-
-strong
-{
-    color: green;
+    color: red;
 }
